test-cases/negative/test_060_invalid_arithmetic.lay
# negative test: arithmetic operation on incompatible types
# expected: type checker should catch this

the variable x of type String is 'hello'
the variable y of type Number is x divided by 2


